force-app/main/default/objects/Lift_Config__c/Lift_Config__c.object-meta.xml
<CustomObject>
    <label>Lift Config</label>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Lift Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lift Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>