force-app/main/default/objects/Lift_Config__c/fields/Airbag_Option__c.field-meta.xml
<CustomField>
    <fullName>Airbag_Option__c</fullName>
    <label>Airbag Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Airbag_Option</valueSetName>
    </valueSet>
</CustomField>