force-app/main/default/objects/Lift_Config__c/fields/Door_Height__c.field-meta.xml
<CustomField>
    <fullName>Door_Height__c</fullName>
    <label>Door Height</label>
    <length>20</length>
    <type>Text</type>
</CustomField>