force-app/main/default/objects/Lift_Config__c/fields/Door_Width__c.field-meta.xml
<CustomField>
    <fullName>Door_Width__c</fullName>
    <label>Door Width</label>
    <length>20</length>
    <type>Text</type>
</CustomField>