force-app/main/default/objects/Lift_Config__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <label>Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Entry_Type</valueSetName>
    </valueSet>
</CustomField>