force-app/main/default/objects/Lift_Config__c/fields/Lift_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Lift_Capacity__c</fullName>
    <label>Lift Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Lift_Capacity</valueSetName>
    </valueSet>
</CustomField>