force-app/main/default/objects/Lift_Config__c/fields/Lift_ID__c.field-meta.xml
<CustomField>
    <fullName>Lift_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lift ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>