force-app/main/default/objects/Lift_Config__c/fields/Occupant_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupant_Type__c</fullName>
    <label>Occupant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Occupant_Type</valueSetName>
    </valueSet>
</CustomField>